// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PlayerControls > matches the snapshot 1`] = `
"<div class="centerItems playerControls"><button class="centerItems buttonLink" type="button" title="Switch shuffle off">
    <phshuffle aria-hidden="true" class="icon" color="currentColor" size="24" weight="regular"></phshuffle><span class="clamp text visuallyHidden">Switch shuffle off</span>
  </button>
  <div class="centerItems spaceBetween"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
      <phskipback aria-hidden="true" class="icon" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
    </button>
    <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
      <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
    </button>
    <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
      <phskipforward aria-hidden="true" class="icon" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
    </button>
  </div><button class="centerItems buttonLink" type="button" title="Turn on repeat all">
    <phrepeat aria-hidden="true" class="icon" color="currentColor" size="24" weight="regular"></phrepeat><span class="clamp text visuallyHidden">Turn on repeat all</span>
  </button>
</div>"
`;

exports[`PlayerControls > when isRadioStation value is true > matches the snapshot 1`] = `
"<div class="centerItems playerControls">
  <!--v-if-->
  <div class="centerItems spaceBetween"><button class="centerItems buttonLink disabled" disabled="" type="button" title="Previous track">
      <phskipback aria-hidden="true" class="icon" size="24" weight="fill"></phskipback><span class="clamp text visuallyHidden"> Previous track </span>
    </button>
    <!--v-if--><button class="centerItems buttonLink playPauseButton playPauseButton" type="button" title="Play current track">
      <phplay aria-hidden="true" class="icon" size="24" weight="regular"></phplay><span class="clamp text visuallyHidden">Play current track</span>
    </button>
    <!--v-if--><button class="centerItems buttonLink disabled" disabled="" type="button" title="Next track">
      <phskipforward aria-hidden="true" class="icon" size="24" weight="fill"></phskipforward><span class="clamp text visuallyHidden"> Next track </span>
    </button>
  </div>
  <!--v-if-->
</div>"
`;
